--- a/src/output.css
+++ b/src/output.css
@@ -30,15 +30,22 @@
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
+    --text-6xl: 3.75rem;
+    --text-6xl--line-height: 1;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --tracking-wide: 0.025em;
     --radius-md: 0.375rem;
+    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -209,11 +216,35 @@
   .end-3 {
     inset-inline-end: calc(var(--spacing) * 3);
   }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
   .top-\[9px\] {
     top: 9px;
   }
+  .right-0 {
+    right: calc(var(--spacing) * 0);
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
+  .z-0 {
+    z-index: 0;
+  }
+  .z-5 {
+    z-index: 5;
+  }
   .z-10 {
     z-index: 10;
+  }
+  .z-50 {
+    z-index: 50;
+  }
+  .order-1 {
+    order: 1;
+  }
+  .order-2 {
+    order: 2;
   }
   .container {
     width: 100%;
@@ -242,17 +273,35 @@
   .my-2 {
     margin-block: calc(var(--spacing) * 2);
   }
+  .my-4 {
+    margin-block: calc(var(--spacing) * 4);
+  }
   .ms-2 {
     margin-inline-start: calc(var(--spacing) * 2);
   }
   .me-2 {
     margin-inline-end: calc(var(--spacing) * 2);
   }
+  .-mt-10 {
+    margin-top: calc(var(--spacing) * -10);
+  }
+  .-mt-16 {
+    margin-top: calc(var(--spacing) * -16);
+  }
+  .-mt-20 {
+    margin-top: calc(var(--spacing) * -20);
+  }
+  .-mt-24 {
+    margin-top: calc(var(--spacing) * -24);
+  }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
+  }
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
   }
   .mb-0 {
     margin-bottom: calc(var(--spacing) * 0);
@@ -268,6 +317,9 @@
   }
   .flex {
     display: flex;
+  }
+  .grid {
+    display: grid;
   }
   .hidden {
     display: none;
@@ -299,8 +351,29 @@
   .h-14 {
     height: calc(var(--spacing) * 14);
   }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
+  }
   .h-screen {
     height: 100vh;
+  }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
+  }
+  .w-24 {
+    width: calc(var(--spacing) * 24);
+  }
+  .w-28 {
+    width: calc(var(--spacing) * 28);
+  }
+  .w-30 {
+    width: calc(var(--spacing) * 30);
+  }
+  .w-32 {
+    width: calc(var(--spacing) * 32);
   }
   .w-48 {
     width: calc(var(--spacing) * 48);
@@ -316,6 +389,9 @@
   }
   .list-none {
     list-style-type: none;
+  }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -334,6 +410,9 @@
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
+  }
+  .gap-\[30px\] {
+    gap: 30px;
   }
   .space-x-3 {
     :where(& > :not(:last-child)) {
@@ -359,6 +438,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .rounded-full {
+    border-radius: calc(infinity * 1px);
+  }
   .rounded-md {
     border-radius: var(--radius-md);
   }
@@ -374,8 +456,15 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
   .border-gray-100 {
     border-color: var(--color-gray-100);
+  }
+  .border-gray-200 {
+    border-color: var(--color-gray-200);
   }
   .border-red-500 {
     border-color: var(--color-red-500);
@@ -413,6 +502,33 @@
   .bg-\[url\(\'\.\.\/\.\.\/assets\/images\/bg\/1\.jpg\'\)\] {
     background-image: url('../../assets/images/bg/1.jpg');
   }
+  .bg-\[url\(\'\.\.\/\.\.\/assets\/img\/hero\.jpg\'\)\] {
+    background-image: url('../../assets/img/hero.jpg');
+  }
+  .bg-\[url\(\'\.\.\/\.\.assets\/img\/hero\.jpg\'\)\] {
+    background-image: url('../..assets/img/hero.jpg');
+  }
+  .bg-\[url\(\'\.\.\/a\'\)\] {
+    background-image: url('../a');
+  }
+  .bg-\[url\(\'\.\.\/ass\'\)\] {
+    background-image: url('../ass');
+  }
+  .bg-\[url\(\'\.\.\/asse\'\)\] {
+    background-image: url('../asse');
+  }
+  .bg-\[url\(\'\.\.\/assets\'\)\] {
+    background-image: url('../assets');
+  }
+  .bg-\[url\(\'\.\.\/assets\/\'\)\] {
+    background-image: url('../assets/');
+  }
+  .bg-\[url\(\'\.\.\/assets\/i\'\)\] {
+    background-image: url('../assets/i');
+  }
+  .bg-\[url\(\'\.\.\/assets\/im\'\)\] {
+    background-image: url('../assets/im');
+  }
   .bg-\[url\(\'\.\.\/assets\/im\/hero-bg\.jpg\'\)\] {
     background-image: url('../assets/im/hero-bg.jpg');
   }
@@ -421,6 +537,9 @@
   }
   .bg-\[url\(\'\.\.\/assets\/images\/hero-bg\.jpg\'\)\] {
     background-image: url('../assets/images/hero-bg.jpg');
+  }
+  .bg-\[url\(\'\.\.\/assets\/img\'\)\] {
+    background-image: url('../assets/img');
   }
   .bg-\[url\(\'\.\.\/assets\/img\/\'\)\] {
     background-image: url('../assets/img/');
@@ -431,8 +550,23 @@
   .bg-\[url\(\'\.\.\/assets\/img\/her\'\)\] {
     background-image: url('../assets/img/her');
   }
+  .bg-\[url\(\'\.\.\/assets\/img\/hero\'\)\] {
+    background-image: url('../assets/img/hero');
+  }
   .bg-\[url\(\'\.\.\/assets\/img\/hero-bg\.jpg\'\)\] {
     background-image: url('../assets/img/hero-bg.jpg');
+  }
+  .bg-\[url\(\'\.\.\/assets\/img\/hero\.\'\)\] {
+    background-image: url('../assets/img/hero.');
+  }
+  .bg-\[url\(\'\.\.\/assets\/img\/hero\.jpg\'\)\] {
+    background-image: url('../assets/img/hero.jpg');
+  }
+  .bg-\[url\(\'\.\.\/assets\/img\/herobg\'\)\] {
+    background-image: url('../assets/img/herobg');
+  }
+  .bg-\[url\(\'\.\.\/assets\/img\/herobg\.jpg\'\)\] {
+    background-image: url('../assets/img/herobg.jpg');
   }
   .bg-\[url\(\'\.\/\'\)\] {
     background-image: url('./');
@@ -470,6 +604,9 @@
   .py-36 {
     padding-block: calc(var(--spacing) * 36);
   }
+  .py-42 {
+    padding-block: calc(var(--spacing) * 42);
+  }
   .ps-0 {
     padding-inline-start: calc(var(--spacing) * 0);
   }
@@ -491,6 +628,14 @@
   .align-middle {
     vertical-align: middle;
   }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
@@ -506,6 +651,10 @@
   .text-sm {
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -553,8 +702,25 @@
   .text-white {
     color: var(--color-white);
   }
+  .text-white\/50 {
+    color: color-mix(in srgb, #fff 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-white) 50%, transparent);
+    }
+  }
+  .capitalize {
+    text-transform: capitalize;
+  }
   .underline {
     text-decoration-line: underline;
+  }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-md {
+    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-sm {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
@@ -586,9 +752,20 @@
     --tw-duration: 500ms;
     transition-duration: 500ms;
   }
+  .ease-in-out {
+    --tw-ease: var(--ease-in-out);
+    transition-timing-function: var(--ease-in-out);
+  }
   .outline-none {
     --tw-outline-style: none;
     outline-style: none;
+  }
+  .hover\:bg-red-500 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-red-500);
+      }
+    }
   }
   .hover\:bg-red-600 {
     &:hover {
@@ -604,6 +781,13 @@
       }
     }
   }
+  .hover\:text-red-600 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-red-600);
+      }
+    }
+  }
   .hover\:text-slate-200 {
     &:hover {
       @media (hover: hover) {
@@ -611,10 +795,37 @@
       }
     }
   }
+  .hover\:text-white {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-white);
+      }
+    }
+  }
   .focus\:ring-0 {
     &:focus {
       --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .md\:order-1 {
+    @media (width >= 48rem) {
+      order: 1;
+    }
+  }
+  .md\:order-2 {
+    @media (width >= 48rem) {
+      order: 2;
+    }
+  }
+  .md\:col-span-5 {
+    @media (width >= 48rem) {
+      grid-column: span 5 / span 5;
+    }
+  }
+  .md\:col-span-7 {
+    @media (width >= 48rem) {
+      grid-column: span 7 / span 7;
     }
   }
   .md\:block {
@@ -627,9 +838,19 @@
       width: calc(var(--spacing) * 52);
     }
   }
+  .md\:grid-cols-12 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(12, minmax(0, 1fr));
+    }
+  }
   .md\:px-6 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 6);
+    }
+  }
+  .md\:pt-7 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 7);
     }
   }
   .md\:pt-72 {
@@ -637,9 +858,46 @@
       padding-top: calc(var(--spacing) * 72);
     }
   }
+  .md\:pt-74 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 74);
+    }
+  }
+  .md\:pt-76 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 76);
+    }
+  }
+  .md\:pt-78 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 78);
+    }
+  }
   .md\:pb-60 {
     @media (width >= 48rem) {
       padding-bottom: calc(var(--spacing) * 60);
+    }
+  }
+  .md\:pb-64 {
+    @media (width >= 48rem) {
+      padding-bottom: calc(var(--spacing) * 64);
+    }
+  }
+  .md\:text-center {
+    @media (width >= 48rem) {
+      text-align: center;
+    }
+  }
+  .md\:text-3xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
+    }
+  }
+  .md\:text-4xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
   .md\:text-5xl {
@@ -652,6 +910,21 @@
     @media (width >= 48rem) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .lg\:col-span-4 {
+    @media (width >= 64rem) {
+      grid-column: span 4 / span 4;
+    }
+  }
+  .lg\:col-span-8 {
+    @media (width >= 64rem) {
+      grid-column: span 8 / span 8;
+    }
+  }
+  .lg\:block {
+    @media (width >= 64rem) {
+      display: block;
     }
   }
   .lg\:flex {
@@ -669,6 +942,16 @@
       height: calc(var(--spacing) * 16);
     }
   }
+  .lg\:h-24 {
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 24);
+    }
+  }
+  .lg\:w-24 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 24);
+    }
+  }
   .lg\:space-x-6 {
     @media (width >= 64rem) {
       :where(& > :not(:last-child)) {
@@ -681,6 +964,65 @@
   .lg\:px-8 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:pt-72 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 72);
+    }
+  }
+  .lg\:pt-76 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 76);
+    }
+  }
+  .lg\:pb-6 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 6);
+    }
+  }
+  .lg\:pb-56 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 56);
+    }
+  }
+  .lg\:pb-64 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 64);
+    }
+  }
+  .lg\:text-4xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
+  .lg\:text-5xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .lg\:text-6xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-6xl);
+      line-height: var(--tw-leading, var(--text-6xl--line-height));
+    }
+  }
+  .lg\:text-xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .xl\:pt-76 {
+    @media (width >= 80rem) {
+      padding-top: calc(var(--spacing) * 76);
+    }
+  }
+  .xl\:pb-64 {
+    @media (width >= 80rem) {
+      padding-bottom: calc(var(--spacing) * 64);
     }
   }
   .dark\:border-gray-800 {
@@ -811,6 +1153,10 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-ease {
+  syntax: "*";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -834,6 +1180,7 @@
       --tw-ring-offset-shadow: 0 0 #0000;
       --tw-outline-style: solid;
       --tw-duration: initial;
+      --tw-ease: initial;
     }
   }
 }
