--- a/src/output.css
+++ b/src/output.css
@@ -14,10 +14,6 @@
     --color-slate-900: oklch(20.8% 0.042 265.755);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
-    --color-gray-300: oklch(87.2% 0.01 258.338);
-    --color-gray-400: oklch(70.7% 0.022 261.325);
-    --color-gray-500: oklch(55.1% 0.027 264.364);
-    --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-black: #000;
     --color-white: #fff;
@@ -46,6 +42,7 @@
     --tracking-wide: 0.025em;
     --radius-md: 0.375rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
+    --blur-lg: 16px;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -204,8 +201,14 @@
   .absolute {
     position: absolute;
   }
+  .fixed {
+    position: fixed;
+  }
   .relative {
     position: relative;
+  }
+  .sticky {
+    position: sticky;
   }
   .inset-0 {
     inset: calc(var(--spacing) * 0);
@@ -219,26 +222,26 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-10 {
+    top: calc(var(--spacing) * 10);
+  }
   .top-\[9px\] {
     top: 9px;
   }
-  .right-0 {
-    right: calc(var(--spacing) * 0);
+  .-bottom-1 {
+    bottom: calc(var(--spacing) * -1);
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
-  }
-  .z-0 {
-    z-index: 0;
-  }
-  .z-5 {
-    z-index: 5;
   }
   .z-10 {
     z-index: 10;
   }
   .z-50 {
     z-index: 50;
+  }
+  .z-70 {
+    z-index: 70;
   }
   .order-1 {
     order: 1;
@@ -282,15 +285,6 @@
   .me-2 {
     margin-inline-end: calc(var(--spacing) * 2);
   }
-  .-mt-10 {
-    margin-top: calc(var(--spacing) * -10);
-  }
-  .-mt-16 {
-    margin-top: calc(var(--spacing) * -16);
-  }
-  .-mt-20 {
-    margin-top: calc(var(--spacing) * -20);
-  }
   .-mt-24 {
     margin-top: calc(var(--spacing) * -24);
   }
@@ -305,12 +299,6 @@
   }
   .mb-0 {
     margin-bottom: calc(var(--spacing) * 0);
-  }
-  .mb-4 {
-    margin-bottom: calc(var(--spacing) * 4);
-  }
-  .mb-6 {
-    margin-bottom: calc(var(--spacing) * 6);
   }
   .contents {
     display: contents;
@@ -354,26 +342,14 @@
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
-  .h-screen {
-    height: 100vh;
+  .h-\[2px\] {
+    height: 2px;
   }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
+  .w-0 {
+    width: calc(var(--spacing) * 0);
   }
   .w-20 {
     width: calc(var(--spacing) * 20);
-  }
-  .w-24 {
-    width: calc(var(--spacing) * 24);
-  }
-  .w-28 {
-    width: calc(var(--spacing) * 28);
-  }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
-  }
-  .w-32 {
-    width: calc(var(--spacing) * 32);
   }
   .w-48 {
     width: calc(var(--spacing) * 48);
@@ -387,14 +363,8 @@
   .resize {
     resize: both;
   }
-  .list-none {
-    list-style-type: none;
-  }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-  .flex-col {
-    flex-direction: column;
   }
   .items-center {
     align-items: center;
@@ -456,15 +426,8 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
-  .border-b {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 1px;
-  }
   .border-gray-100 {
     border-color: var(--color-gray-100);
-  }
-  .border-gray-200 {
-    border-color: var(--color-gray-200);
   }
   .border-red-500 {
     border-color: var(--color-red-500);
@@ -478,6 +441,12 @@
       background-color: color-mix(in oklab, var(--color-black) 50%, transparent);
     }
   }
+  .bg-black\/90 {
+    background-color: color-mix(in srgb, #000 90%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-black) 90%, transparent);
+    }
+  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
@@ -487,92 +456,26 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-\[url\(\'\'\)\] {
-    background-image: url('');
+  .bg-white\/70 {
+    background-color: color-mix(in srgb, #fff 70%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-white) 70%, transparent);
+    }
   }
-  .bg-\[url\(\'\.\'\)\] {
-    background-image: url('.');
+  .bg-white\/80 {
+    background-color: color-mix(in srgb, #fff 80%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-white) 80%, transparent);
+    }
   }
-  .bg-\[url\(\'\.\.\'\)\] {
-    background-image: url('..');
-  }
-  .bg-\[url\(\'\.\.\/\'\)\] {
-    background-image: url('../');
-  }
-  .bg-\[url\(\'\.\.\/\.\.\/assets\/images\/bg\/1\.jpg\'\)\] {
-    background-image: url('../../assets/images/bg/1.jpg');
-  }
-  .bg-\[url\(\'\.\.\/\.\.\/assets\/img\/hero\.jpg\'\)\] {
-    background-image: url('../../assets/img/hero.jpg');
-  }
-  .bg-\[url\(\'\.\.\/\.\.assets\/img\/hero\.jpg\'\)\] {
-    background-image: url('../..assets/img/hero.jpg');
-  }
-  .bg-\[url\(\'\.\.\/a\'\)\] {
-    background-image: url('../a');
-  }
-  .bg-\[url\(\'\.\.\/ass\'\)\] {
-    background-image: url('../ass');
-  }
-  .bg-\[url\(\'\.\.\/asse\'\)\] {
-    background-image: url('../asse');
-  }
-  .bg-\[url\(\'\.\.\/assets\'\)\] {
-    background-image: url('../assets');
-  }
-  .bg-\[url\(\'\.\.\/assets\/\'\)\] {
-    background-image: url('../assets/');
-  }
-  .bg-\[url\(\'\.\.\/assets\/i\'\)\] {
-    background-image: url('../assets/i');
-  }
-  .bg-\[url\(\'\.\.\/assets\/im\'\)\] {
-    background-image: url('../assets/im');
-  }
-  .bg-\[url\(\'\.\.\/assets\/im\/hero-bg\.jpg\'\)\] {
-    background-image: url('../assets/im/hero-bg.jpg');
-  }
-  .bg-\[url\(\'\.\.\/assets\/ima\/hero-bg\.jpg\'\)\] {
-    background-image: url('../assets/ima/hero-bg.jpg');
-  }
-  .bg-\[url\(\'\.\.\/assets\/images\/hero-bg\.jpg\'\)\] {
-    background-image: url('../assets/images/hero-bg.jpg');
-  }
-  .bg-\[url\(\'\.\.\/assets\/img\'\)\] {
-    background-image: url('../assets/img');
-  }
-  .bg-\[url\(\'\.\.\/assets\/img\/\'\)\] {
-    background-image: url('../assets/img/');
-  }
-  .bg-\[url\(\'\.\.\/assets\/img\/h\'\)\] {
-    background-image: url('../assets/img/h');
-  }
-  .bg-\[url\(\'\.\.\/assets\/img\/her\'\)\] {
-    background-image: url('../assets/img/her');
-  }
-  .bg-\[url\(\'\.\.\/assets\/img\/hero\'\)\] {
-    background-image: url('../assets/img/hero');
-  }
-  .bg-\[url\(\'\.\.\/assets\/img\/hero-bg\.jpg\'\)\] {
-    background-image: url('../assets/img/hero-bg.jpg');
-  }
-  .bg-\[url\(\'\.\.\/assets\/img\/hero\.\'\)\] {
-    background-image: url('../assets/img/hero.');
-  }
-  .bg-\[url\(\'\.\.\/assets\/img\/hero\.jpg\'\)\] {
-    background-image: url('../assets/img/hero.jpg');
-  }
-  .bg-\[url\(\'\.\.\/assets\/img\/herobg\'\)\] {
-    background-image: url('../assets/img/herobg');
+  .bg-white\/90 {
+    background-color: color-mix(in srgb, #fff 90%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-white) 90%, transparent);
+    }
   }
   .bg-\[url\(\'\.\.\/assets\/img\/herobg\.jpg\'\)\] {
     background-image: url('../assets/img/herobg.jpg');
-  }
-  .bg-\[url\(\'\.\/\'\)\] {
-    background-image: url('./');
-  }
-  .bg-\[url\(\'\.\/images\/hero-bg\.jpg\'\)\] {
-    background-image: url('./images/hero-bg.jpg');
   }
   .bg-cover {
     background-size: cover;
@@ -589,9 +492,6 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
-  .px-6 {
-    padding-inline: calc(var(--spacing) * 6);
-  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
@@ -600,9 +500,6 @@
   }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
-  }
-  .py-36 {
-    padding-block: calc(var(--spacing) * 36);
   }
   .py-42 {
     padding-block: calc(var(--spacing) * 42);
@@ -675,23 +572,8 @@
   .text-black {
     color: var(--color-black);
   }
-  .text-black\/10 {
-    color: color-mix(in srgb, #000 10%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      color: color-mix(in oklab, var(--color-black) 10%, transparent);
-    }
-  }
-  .text-black\/40 {
-    color: color-mix(in srgb, #000 40%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      color: color-mix(in oklab, var(--color-black) 40%, transparent);
-    }
-  }
-  .text-black\/50 {
-    color: color-mix(in srgb, #000 50%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      color: color-mix(in oklab, var(--color-black) 50%, transparent);
-    }
+  .text-gray-800 {
+    color: var(--color-gray-800);
   }
   .text-red-500 {
     color: var(--color-red-500);
@@ -722,10 +604,6 @@
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-sm {
-    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .ring {
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -734,10 +612,19 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  .backdrop-blur {
+    --tw-backdrop-blur: blur(8px);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-blur-lg {
+    --tw-backdrop-blur: blur(var(--blur-lg));
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-filter {
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
   .transition-all {
     transition-property: all;
@@ -760,6 +647,13 @@
     --tw-outline-style: none;
     outline-style: none;
   }
+  .group-hover\:w-full {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        width: 100%;
+      }
+    }
+  }
   .hover\:bg-red-500 {
     &:hover {
       @media (hover: hover) {
@@ -767,10 +661,24 @@
       }
     }
   }
-  .hover\:bg-red-600 {
+  .hover\:text-\[\#1E252B\] {
     &:hover {
       @media (hover: hover) {
-        background-color: var(--color-red-600);
+        color: #1E252B;
+      }
+    }
+  }
+  .hover\:text-\[\#FB2C36\] {
+    &:hover {
+      @media (hover: hover) {
+        color: #FB2C36;
+      }
+    }
+  }
+  .hover\:text-\[1E252B\] {
+    &:hover {
+      @media (hover: hover) {
+        color: 1E252B;
       }
     }
   }
@@ -848,41 +756,6 @@
       padding-inline: calc(var(--spacing) * 6);
     }
   }
-  .md\:pt-7 {
-    @media (width >= 48rem) {
-      padding-top: calc(var(--spacing) * 7);
-    }
-  }
-  .md\:pt-72 {
-    @media (width >= 48rem) {
-      padding-top: calc(var(--spacing) * 72);
-    }
-  }
-  .md\:pt-74 {
-    @media (width >= 48rem) {
-      padding-top: calc(var(--spacing) * 74);
-    }
-  }
-  .md\:pt-76 {
-    @media (width >= 48rem) {
-      padding-top: calc(var(--spacing) * 76);
-    }
-  }
-  .md\:pt-78 {
-    @media (width >= 48rem) {
-      padding-top: calc(var(--spacing) * 78);
-    }
-  }
-  .md\:pb-60 {
-    @media (width >= 48rem) {
-      padding-bottom: calc(var(--spacing) * 60);
-    }
-  }
-  .md\:pb-64 {
-    @media (width >= 48rem) {
-      padding-bottom: calc(var(--spacing) * 64);
-    }
-  }
   .md\:text-center {
     @media (width >= 48rem) {
       text-align: center;
@@ -892,24 +765,6 @@
     @media (width >= 48rem) {
       font-size: var(--text-3xl);
       line-height: var(--tw-leading, var(--text-3xl--line-height));
-    }
-  }
-  .md\:text-4xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-4xl);
-      line-height: var(--tw-leading, var(--text-4xl--line-height));
-    }
-  }
-  .md\:text-5xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-5xl);
-      line-height: var(--tw-leading, var(--text-5xl--line-height));
-    }
-  }
-  .md\:text-xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-xl);
-      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
   .lg\:col-span-4 {
@@ -971,48 +826,15 @@
       padding-top: calc(var(--spacing) * 72);
     }
   }
-  .lg\:pt-76 {
-    @media (width >= 64rem) {
-      padding-top: calc(var(--spacing) * 76);
-    }
-  }
-  .lg\:pb-6 {
-    @media (width >= 64rem) {
-      padding-bottom: calc(var(--spacing) * 6);
-    }
-  }
   .lg\:pb-56 {
     @media (width >= 64rem) {
       padding-bottom: calc(var(--spacing) * 56);
-    }
-  }
-  .lg\:pb-64 {
-    @media (width >= 64rem) {
-      padding-bottom: calc(var(--spacing) * 64);
-    }
-  }
-  .lg\:text-4xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-4xl);
-      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
   .lg\:text-5xl {
     @media (width >= 64rem) {
       font-size: var(--text-5xl);
       line-height: var(--tw-leading, var(--text-5xl--line-height));
-    }
-  }
-  .lg\:text-6xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-6xl);
-      line-height: var(--tw-leading, var(--text-6xl--line-height));
-    }
-  }
-  .lg\:text-xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-xl);
-      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
   .xl\:pt-76 {
@@ -1025,22 +847,15 @@
       padding-bottom: calc(var(--spacing) * 64);
     }
   }
+  .xl\:text-6xl {
+    @media (width >= 80rem) {
+      font-size: var(--text-6xl);
+      line-height: var(--tw-leading, var(--text-6xl--line-height));
+    }
+  }
   .dark\:border-gray-800 {
     @media (prefers-color-scheme: dark) {
       border-color: var(--color-gray-800);
-    }
-  }
-  .dark\:bg-slate-900 {
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--color-slate-900);
-    }
-  }
-  .dark\:text-white\/70 {
-    @media (prefers-color-scheme: dark) {
-      color: color-mix(in srgb, #fff 70%, transparent);
-      @supports (color: color-mix(in lab, red, red)) {
-        color: color-mix(in oklab, var(--color-white) 70%, transparent);
-      }
     }
   }
   .dark\:shadow-gray-800 {
@@ -1048,15 +863,6 @@
       --tw-shadow-color: oklch(27.8% 0.033 256.848);
       @supports (color: color-mix(in lab, red, red)) {
         --tw-shadow-color: color-mix(in oklab, var(--color-gray-800) var(--tw-shadow-alpha), transparent);
-      }
-    }
-  }
-  .dark\:hover\:text-white {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          color: var(--color-white);
-        }
       }
     }
   }
@@ -1149,6 +955,42 @@
   inherits: false;
   initial-value: solid;
 }
+@property --tw-backdrop-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-sepia {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-duration {
   syntax: "*";
   inherits: false;
@@ -1179,6 +1021,15 @@
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
       --tw-outline-style: solid;
+      --tw-backdrop-blur: initial;
+      --tw-backdrop-brightness: initial;
+      --tw-backdrop-contrast: initial;
+      --tw-backdrop-grayscale: initial;
+      --tw-backdrop-hue-rotate: initial;
+      --tw-backdrop-invert: initial;
+      --tw-backdrop-opacity: initial;
+      --tw-backdrop-saturate: initial;
+      --tw-backdrop-sepia: initial;
       --tw-duration: initial;
       --tw-ease: initial;
     }
